SUBDIRS = developer_guide

EXTRA_DIST = coding.html discuss.html format.html guiControlFlow.html gui_layout.txt hook_prio.txt index.html library-header.txt ltt-to-do.html lttv.html lttvwindow_events_delivery.txt process_traceset_strict_boundaries.txt program-header.txt requests_servicing_schedulers.txt status.html todo.html
