#
# Makefile for LTT New generation user interface : plugins.
#
# Created by Mathieu Desnoyers on May 6, 2003
#

# WARNING : subdirs order is important : mainWin depends on API

SUBDIRS = lttvwindow controlflow detailedevents statistics filter tracecontrol histogram interrupts resourceview

# TODO: PORT for 0.10
#diskperformance tutorial



