SUBDIRS = developer_guide

EXTRA_DIST = coding.html format.html library-header.txt lttng-atomic-up.txt \
	lttng-format-string.txt lttng-lttv-compatibility.html \
	lttng-lttv-new-features.html lttng-lttv-roadmap.html \
	lttng-new-marker-event-desc.txt lttng-synthetic-tsc-msb.txt \
	lttng-userspace-tracing-lite.txt lttng-userspace-tracing-lite.txt \
	lttng-xen.txt lttng_java_instrumentation.txt lttv.html \
	lttv_filter_specification.docbook lttv_gui_layout.txt \
	lttv_guidetailed-event-list-redesign.txt lttv_hook_prio.txt \
	lttv_process_traceset_strict_boundaries.txt \
	lttv_requests_servicing_schedulers.txt lttvwindow_events_delivery.txt \
	marker-types.txt program-header.txt time-monotonic-accurate.txt \
	tracing_tools_overview.html tsc-smallv1.txt tsc-smallv2.txt tsc.txt \
	xen-port.txt ust.html
